[FIX] remove overflow-y everywhere + correct english mistakes

--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     overflow: scroll;
+    overflow-x: auto;
 }
 
 #profileContainer .topContainer, #profileContainer .bottomContainer {
