--- a/src/components/Projects/Project.css
+++ b/src/components/Projects/Project.css
@@ -1,5 +1,6 @@
 #projectsContainer {
     overflow: scroll;
+    overflow-x: auto;
     height: 100%;
 }
 
